separate GA tags for prod/dev

--- a/sample-viewer/src/index.html
+++ b/sample-viewer/src/index.html
@@ -23,7 +23,7 @@
       m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-    ga('create', 'UA-136260805-2', 'auto');
+    // ga('create', 'UA-136260805-2', 'auto');
   </script>
 
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
