--- a/sample-viewer/src/index.html
+++ b/sample-viewer/src/index.html
@@ -11,9 +11,9 @@
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
 
   <!-- prefetch static google fonts -->
-  <!-- <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin> -->
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
 </head>
 
